file name refactored

--- a/myapp/src/main/webapp/WEB-INF/web.xml
+++ b/myapp/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
   </listener>
   <!-- MyHttpSessionListener -->
   <listener>
-    <listener-class>com.gdu.myapp.listener.MyHttpSessionListener</listener-class>
+    <listener-class>com.gdu.semi3.listener.MyHttpSessionListener</listener-class>
   </listener>
   
   <!-- Processes application requests -->
