--- a/myapp/pom.xml
+++ b/myapp/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gdu</groupId>
   <artifactId>semi3</artifactId>
-  <name>myapp</name>
+  <name>semi3</name>
   <packaging>war</packaging>
   <version>1.0.0-BUILD-SNAPSHOT</version>
 
